# test24

./: .gitignore  CMakeLists.txt  README.md  buildew  pyproject.toml
src/: __init__.py  test24.cpp
src/test24/: hello3.py
tests/: test_hello.py
